# tmp-aiida-vasp

./: test.ipynb  test.py  test.txt
.continue/prompts/: new-prompt-1.md  new-prompt.md
aiida-vasp-ext-mlauer/: pyproject.toml
aiida-vasp-ext-mlauer/aiida_vasp_ext_mlauer/util/: functions.py  orm.py  structures.py
aiida-vasp-ext-mlauer/aiida_vasp_ext_mlauer/workflows/: eos.py  eos_old.py  eos_para.py  vol_opt.py
aiida_vasp_production/: k-space.ipynb  tmp.ipynb
aiida_vasp_production/Nitiride_Relaxation/: check_out_bandstructure.ipynb  convergence_analysis.ipynb  generate_inputs.ipynb  perform_bandstructure.py  perform_vol_opt.py  recover_vol_opt_inputs.ipynb  test_energy_convergence.py
aiida_vasp_production/Nitiride_Relaxation/test_folder/: CHGCAR  CONTCAR  DOSCAR  EIGENVAL  IBZKPT  INCAR  OSZICAR  OUTCAR  PCDAT  POSCAR  POTCAR  WAVECAR  vasp_output  vaspout.h5  vasprun.xml
aiida_vasp_production/programa_atomico/: instructions.tar.bz2
aiida_vasp_production/programa_atomico/example/: IN  INP.ae  INP.ae-05p  OUT.ae  OUT.ae-05p  POTCARnew  README  VTOTAL0.ae  VTOTAL0.ae-05p  VTOTAL1.ae  VTOTAL1.ae-05p
aiida_vasp_production/test/AlN/: CONTCAR  INCAR  (+3 more)
tests/: jhpc_computer_options.py  test_vol_opt_workchain.py
tests/tutorial_1/: run_fcc_si_one_volume.py
tests/tutorial_2/: Untitled.ipynb
tests/tutorial_3/: run_fcc_si_workchain.py
tests/tutorial_4/: test.ipynb
tutorials/tutorial_1/: run_vasp_lean.py
tutorials/tutorial_2/: run_fcc_si_multiple_volumes.py
tutorials/tutorial_3/: run_fcc_si_workchain.py
tutorials/tutorial_4/: run_sic.py  test.ipynb
(+29 files in other folders)
